unpackaged/main/default/objects/User/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <formula>CASE( 
    TEXT(Agency__c),
'112', 'CPA',
'113', 'CPA',
'114', 'CPA',
'115', 'CPA',
'217', 'RETAIL',
'290', 'RETAIL',
'320', 'CPA',
'340', 'CPA',
'392', 'FINANCE',
'393', 'FINANCE',
'394', 'FINANCE',
'395', 'FINANCE',
'396', 'FINANCE',
'397', 'FINANCE',
'410', 'CPA',
'411', 'CPA',
'412', 'CPA',
'470', 'CPA',
'530', 'Other',
'549', 'RETAIL',
'550', 'RETAIL',
'552', 'RETAIL',
'555', 'RETAIL',
'556', 'RETAIL',
'557', 'RETAIL',
'560', 'RETAIL',
'563', 'HCM',
'583', 'RETAIL',
'585', 'HCM',
'714', 'HCM',
'715', 'HCM',
'800', 'FINANCE',
'803', 'SB',
'804', 'SB',
'805', 'FINANCE',
'808', 'FINANCE',
'809', 'RETAIL',
'810', 'FINANCE',
'811', 'FINANCE',
'812', 'HCM',
'813', 'HCM',
'814', 'FINANCE',
'815', 'FINANCE',
'816', 'FINANCE',
'818', 'CPA',
'819', 'FINANCE',
'822', 'FINANCE',
'823', 'HCM',
'824', 'HCM',
'825', 'HCM',
'826', 'HCM',
'829', 'CPA',
'830', 'CPA',
'831', 'SB',
'832', 'HCM',
'834', 'HCM',
'835', 'HCM',
'836', 'HCM',
'837', 'HCM',
'838', 'HCM',
'839', 'HCM',
'841', 'HCM',
'842', 'HCM',
'840', 'HCM',
'843', 'OTHER',
'844', 'RETAIL',
'845', 'FINANCE',
'846', 'FINANCE',
'847', 'FINANCE',
'849', 'FINANCE',
'850', 'FINANCE',
'852', 'FINANCE',
'853', 'FINANCE',
'854', 'FINANCE',
'855', 'HCM',
'856', 'SB',
'857', 'HCM',
'858', 'HCM',
'Not Assigned'
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU</label>
    <type>Text</type>
</CustomField>