unpackaged/main/default/objects/User/fields/Bypass_Account_Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Account_Duplicate_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Account duplicate rule</label>
    <type>Checkbox</type>
</CustomField>