unpackaged/main/default/objects/User/fields/Bypass_Apex_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Apex_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to bypass all unmanaged apex trigger</description>
    <label>Bypass Apex Triggers</label>
    <type>Checkbox</type>
</CustomField>