unpackaged/main/default/objects/User/fields/Bypass_Contact_Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Contact_Duplicate_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Contact duplicate rule</label>
    <type>Checkbox</type>
</CustomField>