unpackaged/main/default/objects/User/fields/BypassPB__c.field-meta.xml
<CustomField>
    <fullName>BypassPB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass PB</label>
    <type>Checkbox</type>
</CustomField>