unpackaged/main/default/objects/User/fields/BypassWF__c.field-meta.xml
<CustomField>
    <fullName>BypassWF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass WF</label>
    <type>Checkbox</type>
</CustomField>