unpackaged/main/default/objects/User/fields/Comment_on_User__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_User__c</fullName>
    <label>Comment on User</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>