unpackaged/main/default/objects/User/fields/Discount_Validator__c.field-meta.xml
<CustomField>
    <fullName>Discount_Validator__c</fullName>
    <description>User who is liable for the validation of Quote Discounts for the current User</description>
    <label>Discount Validator</label>
    <relationshipName>Quote_Discount_Validator_User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>