unpackaged/main/default/objects/User/fields/Exceptional_Date_Validator__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Date_Validator__c</fullName>
    <formula>CASE(Validation_Group_Level__c , '4 - BU Director','No Validation Needed',
'3 - Sales Director and Regional Director',IF(ISBLANK(Discount_Validator__c),$Label.Default_Exceptional_Date_Validator, Discount_Validator__c),


'2 - Sales Manager and Branch Manager',IF(ISPICKVAL(Discount_Validator__r.Validation_Group_Level__c,'4 - BU Director'),Discount_Validator__c,IF(ISBLANK(Discount_Validator__r.Discount_Validator__c),$Label.Default_Exceptional_Date_Validator,  Discount_Validator__r.Discount_Validator__c )),




'1 - IC',IF(ISPICKVAL(Discount_Validator__r.Validation_Group_Level__c,'4 - BU Director'),Discount_Validator__c,
	IF(ISPICKVAL(Discount_Validator__r.Validation_Group_Level__c,'3 - Sales Director and Regional Director'),
		IF(ISBLANK(Discount_Validator__r.Discount_Validator__c),$Label.Default_Exceptional_Date_Validator,  Discount_Validator__r.Discount_Validator__c ),
		
		IF(ISPICKVAL(Discount_Validator__r.Validation_Group_Level__c,'2 - Sales Manager and Branch Manager'),
			IF(ISPICKVAL(Discount_Validator__r.Discount_Validator__r.Validation_Group_Level__c,'3 - Sales Director and Regional Director'),
				IF(ISBLANK(Discount_Validator__r.Discount_Validator__r.Discount_Validator__c),$Label.Default_Exceptional_Date_Validator,Discount_Validator__r.Discount_Validator__r.Discount_Validator__c),
				IF(ISBLANK(Discount_Validator__r.Discount_Validator__c),$Label.Default_Exceptional_Date_Validator, Discount_Validator__r.Discount_Validator__c)),
				$Label.Default_Exceptional_Date_Validator))),$Label.Default_Exceptional_Date_Validator)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exceptional Date Validator</label>
    <type>Text</type>
</CustomField>