unpackaged/main/default/objects/User/fields/Is_RCC_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Is_RCC_Team_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RCC Team Leader</label>
    <type>Checkbox</type>
</CustomField>