unpackaged/main/default/objects/User/fields/IsManager__c.field-meta.xml
<CustomField>
    <fullName>IsManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager</label>
    <type>Checkbox</type>
</CustomField>