unpackaged/main/default/objects/User/fields/List_of_VR_to_By_Pass__c.field-meta.xml
<CustomField>
    <fullName>List_of_VR_to_By_Pass__c</fullName>
    <label>List of VR to By Pass</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CustomProductLayoutFieldsNotEditable</fullName>
            </value>
            <value>
                <fullName>VR_024_User_cant_edit_Custom_Name</fullName>
            </value>
            <value>
                <fullName>VR_025_User_cant_add_Special_Comment</fullName>
            </value>
            <value>
                <fullName>VR_Contact_Invalid_Email_Rules</fullName>
            </value>
            <value>
                <fullName>VR_Contact004_Email_format_Validation</fullName>
            </value>
            <value>
                <fullName>VR_Contact05_Name</fullName>
            </value>
            <value>
                <fullName>VR_Contact06_PhoneMandatory</fullName>
            </value>
            <value>
                <fullName>VR_Contact07_NoNameEmptying</fullName>
            </value>
            <value>
                <fullName>VR_Lead005_IndCodeMandatoryForConversion</fullName>
                <isActive>false</isActive>
                <label>VR_Lead005_IndCodeMandatoryForConversion</label>
            </value>
            <value>
                <fullName>VR_Lead007_NoAssignmentToSales</fullName>
            </value>
            <value>
                <fullName>VR_Lead008_NoNewLeadWithoutPermSet</fullName>
                <isActive>false</isActive>
                <label>VR_Lead008_NoNewLeadWithoutPermSet</label>
            </value>
            <value>
                <fullName>VR_Lead009_StatusClosedConverted</fullName>
                <isActive>false</isActive>
                <label>VR_Lead009_StatusClosedConverted</label>
            </value>
            <value>
                <fullName>VR_Lead010_NoAssignmentUsersWithPS</fullName>
            </value>
            <value>
                <fullName>VR_Lead011_PRM_Owner_Change</fullName>
            </value>
            <value>
                <fullName>VR_Lead012_NonPRMSalesCantChangeOwner</fullName>
            </value>
            <value>
                <fullName>VR_Oppty01_LeadSource</fullName>
            </value>
            <value>
                <fullName>VR_Oppty09_NoGStageForSales</fullName>
            </value>
            <value>
                <fullName>VR_Oppty11_NoChangeOnClosed</fullName>
            </value>
            <value>
                <fullName>VR_Oppty17_DecisionMakerMandatOnStageD</fullName>
            </value>
            <value>
                <fullName>VR_Oppty18_ForbiddenChangesOnClosed</fullName>
            </value>
            <value>
                <fullName>VR_Oppty19_NoInactivePACOnChange</fullName>
            </value>
            <value>
                <fullName>VR_Oppty20_LeadSourceValuesForSales</fullName>
            </value>
            <value>
                <fullName>VR_Oppty21_NoChangeLeadSourceForSales</fullName>
            </value>
            <value>
                <fullName>VR_Oppty22_NoNewOppyForMarketing</fullName>
            </value>
            <value>
                <fullName>VR_Oppty23_CheckMQL_Open</fullName>
            </value>
            <value>
                <fullName>VR_Oppty28_Contact_Compliance</fullName>
            </value>
            <value>
                <fullName>VR_Quote_016_Contact_Compliance</fullName>
            </value>
            <value>
                <fullName>VR_Stage_D_or_higher_Booking_not_Blank</fullName>
                <isActive>false</isActive>
                <label>VR_Stage_D_or_higher_Booking_not_Blank</label>
            </value>
            <value>
                <fullName>VR003_Email_format_Validation</fullName>
            </value>
            <value>
                <fullName>VR007_NationalId_Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>