unpackaged/main/default/objects/User/fields/RCC_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>RCC_Team_Leader__c</fullName>
    <inlineHelpText>This field needs a value only for RCC Level 1 Users.</inlineHelpText>
    <label>RCC Team Leader</label>
    <relationshipName>RCC_Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>