unpackaged/main/default/objects/User/fields/Sales_Admin_Rights__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Admin Rights</label>
    <type>Checkbox</type>
</CustomField>