unpackaged/main/default/objects/User/fields/Sales_SDR__c.field-meta.xml
<CustomField>
    <fullName>Sales_SDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales SDR</label>
    <type>Checkbox</type>
</CustomField>