unpackaged/main/default/objects/User/fields/SalesPRM__c.field-meta.xml
<CustomField>
    <fullName>SalesPRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales PRM</label>
    <type>Checkbox</type>
</CustomField>