unpackaged/main/default/objects/User/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <length>5</length>
    <type>Text</type>
</CustomField>