unpackaged/main/default/objects/User/fields/SuperApprover__c.field-meta.xml
<CustomField>
    <fullName>SuperApprover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Super Approver</label>
    <type>Checkbox</type>
</CustomField>