unpackaged/main/default/objects/User/fields/TECH_Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>TECH_Power_of_1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Power of 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>