unpackaged/main/default/objects/User/fields/User_Manager__c.field-meta.xml
<CustomField>
    <fullName>User_Manager__c</fullName>
    <formula>Manager.FirstName + " " + Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Manager</label>
    <type>Text</type>
</CustomField>