unpackaged/main/default/objects/User/fields/Validation_Group_Level__c.field-meta.xml
<CustomField>
    <fullName>Validation_Group_Level__c</fullName>
    <description>Used to determine, for each user, the validation group to which he belongs to. This information is then used in discount management.</description>
    <label>Validation Group Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Validation_Group_Level</valueSetName>
    </valueSet>
</CustomField>